@@ -242,10 +242,12 @@ i.get.arrow.mode <- function(graph, arrow.mode=NULL) {
 i.default.values <- list(vertex=list(color="SkyBlue2",
                            size=15,
                            label=i.get.labels,
-                           label.font="",
                            label.degree=-pi/4,
                            label.color="darkblue",
                            label.dist=0,
+                           label.family="serif",
+                           label.font=1,
+                           label.cex=1,
                            frame.color="black"),                           
                          edge=list(color="darkgrey",
                            label=i.get.edge.labels,
